created cloudFront instance attached to my rexrobotix s3 bucket, serving the css file as CDN

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<title>Rex Robotix</title>
-	<style type="text/css" rel="stylesheet" href="./style.css"></style>
+	<link type="text/css" rel="stylesheet" href="https://d3ppeao8xm3lcj.cloudfront.net
+/style.css"></style>
 </head>
 <body>
 	<ul>
