--- a/index.html
+++ b/index.html
@@ -6,12 +6,20 @@
 /style.css"></style>
 </head>
 <body>
-	<ul>
-		<li><a href="https://davideliason.github.io/rex-a-meta-story/"><h4>Story Progress</h4></a></li>
-		<li><a href="http://www.david-made.com"><h4>Other Things I've Made</h4></a></li>
-		<li><a href="https://davideliason.github.io/portfolio/"><h4>Code Portfolio</h4></a></li>
-		<li><a href="https://github.com/davideliason"><h4>GitHub</h4></a></li>
-		<li><a href="https://www.linkedin.com/in/davideliason/"><h4>LinkedIn</h4></a></li>
-	</ul>
+	<div class="navbar">
+  		<a href="#home">Home</a>
+  		<a href="https://davideliason.github.io/rex-a-meta-story/">Story Progress</a>
+	  <div class="dropdown">
+	   	 <button class="dropbtn">Author 
+	   	   <i class="fa fa-caret-down"></i>
+	   	 </button>
+	  	 <div class="dropdown-content">
+	      <a href="http://www.david-made.com"><h4>Other Things I've Made</h4></a>
+	      <a href="https://davideliason.github.io/portfolio/"><h4>Code Portfolio</h4></a>
+	      <a href="https://www.linkedin.com/in/davideliason/"><h4>LinkedIn</h4></a>
+	      <a href="https://github.com/davideliason"><h4>GitHub</h4></a>
+	     </div>
+ 	  </div> 
+	</div>
 </body>
 </html>
