start from scratch. I want to not use template and practice css

--- a/index.html
+++ b/index.html
@@ -2,24 +2,11 @@
 <html>
 <head>
 	<title>Rex Robotix</title>
-	<link type="text/css" rel="stylesheet" href="https://d3ppeao8xm3lcj.cloudfront.net
-/style.css"></style>
+	<link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
-	<div class="navbar">
-  		<a href="#home">Home</a>
-  		<a href="https://davideliason.github.io/rex-a-meta-story/">Story Progress</a>
-	  <div class="dropdown">
-	   	 <button class="dropbtn">Author 
-	   	   <i class="fa fa-caret-down"></i>
-	   	 </button>
-	  	 <div class="dropdown-content">
-	      <a href="http://www.david-made.com"><h4>Other Things I've Made</h4></a>
-	      <a href="https://davideliason.github.io/portfolio/"><h4>Code Portfolio</h4></a>
-	      <a href="https://www.linkedin.com/in/davideliason/"><h4>LinkedIn</h4></a>
-	      <a href="https://github.com/davideliason"><h4>GitHub</h4></a>
-	     </div>
- 	  </div> 
+	<div>
+		<h3>Rex</h3>
 	</div>
 </body>
 </html>
