moudularize the s3 upload function and call into index.js

--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 </head>
 <body>
 	<h3>Rex Robotix: A world </h3>
+	<img src="d1trpccv8pm5k1.cloudfront.net/bsg.jpg" alt="bsg" height="50" width="50">
 </body>
 </html>
