--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Sample Site</title>
+    <title>Rex</title>
 
 </head>
 <body>
-
     <div class="container">
         <div class="jumbotron">
-            <h1>res.sendFile() Works!</h1>
+            <h1>Rex Robotix</h1>
         </div>
     </div>
-
 </body>
 </html>
