--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,14 @@
     <div class="container">
         <div class="jumbotron">
             <h1>Rex Robotix</h1>
+
+        </div>
+        <div>
+		<!-- public/index.html file -->
+		    <form action="/upload" enctype="multipart/form-data" method="POST"> 
+			   <input type="file" name="photo" />
+			   <input type="submit" value="Upload Photo"/>
+			</form>
         </div>
     </div>
 </body>
