--- a/public/members.html
+++ b/public/members.html
@@ -17,7 +17,7 @@
         <div class="jumbotron">
             <h1>Rex Robotix</h1>
             <img src="./photo-storage/bsg.jpg" width="100" alt="bsg">
-            <a href="/login">Login</a>
+            <a href="/">Logout</a>
         </div>
         <div>
             <!-- public/index.html file -->
